--- a/rpi/backend/Cargo.toml
+++ b/rpi/backend/Cargo.toml
@@ -9,4 +9,5 @@ tokio = { version = "1", features = ["full"] }
 rusb = "0.9.4"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
-tower-http = { version = "0.6.1", features = ["fs"] }
+serialport = "4.7.2"
+tower-http = { version = "0.6.1", features = ["cors", "fs"] }
