--- a/rpi/frontend/package.json
+++ b/rpi/frontend/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
+    "@tabler/icons-vue": "^3.34.1",
     "@tailwindcss/vite": "^4.1.10",
     "nuxt": "^4.0.3",
     "nuxt-charts": "^0.2.3",
