--- a/rpi/backend/Cargo.toml
+++ b/rpi/backend/Cargo.toml
@@ -11,3 +11,4 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 serialport = "4.7.2"
 tower-http = { version = "0.6.1", features = ["cors", "fs"] }
+once_cell = "1.21.3"
