--- a/rpi/backend/Cargo.toml
+++ b/rpi/backend/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-axum = "0.7"
+axum = { version = "0.7", features = ["ws"] }
+image = "0.24"
 tokio = { version = "1", features = ["full"] }
 rusb = "0.9.4"
 serde = { version = "1", features = ["derive"] }
@@ -12,3 +13,5 @@ serde_json = "1.0"
 serialport = "4.7.2"
 tower-http = { version = "0.6.1", features = ["cors", "fs"] }
 once_cell = "1.21.3"
+realsense-rust = "1.3.0"
+futures-util = "0.3"
