--- a/rpi/backend/Cargo.toml
+++ b/rpi/backend/Cargo.toml
@@ -16,4 +16,5 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 serialport = "4.7.2"
 tokio = { version = "1", features = ["full"] }
+tokio-util = "0.7.18"
 tower-http = { version = "0.6.1", features = ["cors", "fs"] }
